[package]
name = "kanbars"
version = "0.4.0"
edition = "2024"
description = "Lightning-fast terminal kanban board for JIRA"
license = "MIT"
authors = ["Jake Swanson"]
repository = "https://github.com/yourusername/kanbars"
keywords = ["jira", "kanban", "tui", "terminal", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
chrono = "0.4"
